@startuml

entity "Account" as account {
  *id : BigInt
  --
  *accountNumber : String
  --
  *accountType : String
  --
  *currency : Date
  --
  *balance : BigDecimal
  --
  *active : Boolean
}

entity "Customer" as customer {
  *id: BigInt
  --
  *lastName: String
  --
  *firstName : String
  --
  *address : String
  --
  *active : Boolean
}

entity "Card" as card {
  *id : BigInt
  --
  *cardNumber : BigInt
  --
  *expirationDate : Date
  --
  *ccvCode : Integer
  --
  *accountId : BigInt
  --
  *active : Boolean
}

entity "Transaction" as transaction {
  *id : BigInt
  --
  *transactionDate : Date
  --
  *fromAccountId : BigInt
  --
  *toAccountId : Bigint
  --
  *amount : BigDecimal
  --
  *status : String
}

customer ||--|{ account

account ||--|{ transaction

account ||--|{ card

customer ||--|{ card

@enduml